# Noise

./: CMakeLists.txt  main.cpp
include/graphics/: shaders.h
include/io/: camera.h  keyboard.h  mouse.h
libs/graphics/: shaders.cpp
libs/io/: camera.cpp  keyboard.cpp  mouse.cpp
noise/: perlin.cpp  perlin.h
resources/: fragmentShader.fs  vertexShader.vs
